--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10"
-numpy = "^2.1.3"
+numpy = ">1.24.4, <2.3"
 jax = "==0.4.35"
 chex = "^0.1.87"
 
