--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mpax"
-version = "0.1.1"
+version = "0.1.2"
 description = "MPAX: Mathematical Programming in JAX"
 authors = ["Zedong Peng <zdpeng95@gmail.com>"]
 license = "MIT"
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10"
 numpy = ">1.24.4, <2.3"
-jax = "==0.4.35"
+jax = "^0.4.35"
 chex = "^0.1.87"
 
 
